--- a/css/lists-and-tables.css
+++ b/css/lists-and-tables.css
@@ -6,6 +6,16 @@
     display: table;
 }
 
+.table tr:first-child th:first-child,
+.table-all tr:first-child th:first-child{
+    border-top-left-radius: 2px;
+}
+
+.table tr:first-child th:last-child,
+.table-all tr:first-child th:last-child{
+    border-top-right-radius: 2px;
+}
+
 .table-all {
     border: 1px solid #ccc
 }
