columns no longer have top and bottom padding

--- a/css/grid.css
+++ b/css/grid.css
@@ -21,7 +21,7 @@
     display: -moz-inline-box;
     display: -ms-inline-flexbox;
     display: inline-flex;
-    padding: 8px;
+    padding: 0px 8px;
 }
 
 .row .col.sm-1 {
