--- a/css/base.css
+++ b/css/base.css
@@ -38,23 +38,23 @@
             font-feature-settings: 'liga';
  }
 
-@font-face {
-    font-family: 'Material Icons';
-    font-style: normal;
-    font-weight: 400;
-    src: url("../font/material-icons/MaterialIcons-Regular.eot"); /* For IE6-8 */
-    src: local('Material Icons'),
-        local('MaterialIcons-Regular'),
-        url("../font/material-icons/MaterialIcons-Regular.woff2") format('woff2'),
-        url("../font/material-icons/MaterialIcons-Regular.woff") format('woff'),
-        url("../font/material-icons/MaterialIcons-Regular.ttf") format('truetype');
-}
-
- *:not(.fa),
- *:not(.fa)::before,
- *:not(.fa)::after {
+ *,
+ *::before,
+ *::after {
      font-family: "Roboto", "Helvetica", "Arial", sans-serif;
  }
+
+.material-icons,
+.material-icons::before,
+.material-icons::after {
+    font-family: "Material Icons"!important;
+}
+
+.fa,
+.fa::before,
+.fa::after {
+    font-family: FontAwesome!important;
+}
 
 ::-moz-selection {
     background: #b3d4fc;
