--- a/css/dialogs.css
+++ b/css/dialogs.css
@@ -1,15 +1,20 @@
+.dialog,
+.dialog .title,
+.dialog .actions {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
+}
+
 .dialog {
      padding: 16px;
      border-radius: 2px;
      background-color: #fff;
      color: #000;
-     min-width: 100px;
      z-index: 1001;
-     display: -webkit-box;
-     display: -webkit-flex;
-     display: -moz-box;
-     display: -ms-flexbox;
-     display: flex;
      -webkit-box-orient: vertical;
      -webkit-box-direction: normal;
      -webkit-flex-direction: column;
@@ -17,7 +22,26 @@
         -moz-box-direction: normal;
          -ms-flex-direction: column;
              flex-direction: column;
-     margin: auto;
+     margin: auto 8px;
+     overflow: hidden;
+}
+
+.dialog .title {
+     text-align: center;
+     font-weight: 500;
+}
+
+.dialog .actions {
+     -webkit-box-pack: justify;
+     -webkit-justify-content: space-between;
+        -moz-box-pack: justify;
+         -ms-flex-pack: justify;
+             justify-content: space-between;
+     -webkit-flex-wrap: wrap;
+         -ms-flex-wrap: wrap;
+             flex-wrap: wrap;
+    margin-top: 16px;
+    font-size: 16px;
 }
 
 /* For IE 10+ */
@@ -31,32 +55,6 @@
             transform: translate(-50%, -50%); 
         max-width: 96%;
     }
-}
-
-.dialog .title {
-     text-align: center;
-     font-weight: 500;
-     display: block;
-     width: 100%;
-}
-
-.dialog .actions {
-     display: -webkit-box;
-     display: -webkit-flex;
-     display: -moz-box;
-     display: -ms-flexbox;
-     display: flex;
-     -webkit-box-pack: justify;
-     -webkit-justify-content: space-between;
-        -moz-box-pack: justify;
-         -ms-flex-pack: justify;
-             justify-content: space-between;
-     -webkit-flex-wrap: wrap;
-         -ms-flex-wrap: wrap;
-             flex-wrap: wrap;
-    width: 100%;
-    margin-top: 16px;
-    font-size: 16px;
 }
 
  @media screen and (min-width: 48em) {
