--- a/css/overlays.css
+++ b/css/overlays.css
@@ -1,29 +1,50 @@
 .overlay,
 .overlay-bg {
     position: fixed;
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
     width: 100%;
-    height: 100%;
+    height: 0;
+    overflow: hidden;
+    -webkit-transition:height 0s;
+         -o-transition:height 0s;
+            transition:height 0s;
+}
+
+.overlay.is-upgraded,
+.overlay.is-upgraded .overlay-bg{
+    -webkit-transition: opacity .27s ease-in, height 0s linear .27s;
+         -o-transition: opacity .27s ease-in, height 0s linear .27s;
+            transition: opacity .27s ease-in, height 0s linear .27s;
 }
 
 .overlay {
      z-index: 999;
      top: 0;
-     display: none;
 }
 
 .overlay-bg {
     z-index: 1000;
     background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
 }
 
 .overlay-toggle {
     display: none!important;
 }
 
-.overlay-toggle:checked+.overlay {
-     display: -webkit-box;
-     display: -webkit-flex;
-     display: -moz-box;
-     display: -ms-flexbox;
-     display: flex;
+.overlay-toggle:checked+.overlay,
+.overlay-toggle:checked+.overlay .overlay-bg {
+    height: 100%;
+    opacity: 1;        
+}
+
+.overlay-toggle:checked+.overlay.is-upgraded,
+.overlay-toggle:checked+.overlay.is-upgraded .overlay-bg {
+    -webkit-transition: height 0s, opacity .27s ease-out;
+         -o-transition: height 0s, opacity .27s ease-out;
+            transition: height 0s, opacity .27s ease-out;
 }
