--- a/css/buttons.css
+++ b/css/buttons.css
@@ -71,13 +71,13 @@ input.button[type="submit"] {
     -webkit-box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
             box-shadow: 0 4px 5px 0 rgba(0, 0, 0, 0.14), 0 1px 10px 0 rgba(0, 0, 0, 0.12), 0 2px 4px -1px rgba(0, 0, 0, 0.2);
     background-color: rgba(158, 158, 158, 0.40);
-}
+} 
 
 .button.raised:focus:not(:active) {
     -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, 0.18), 0 8px 16px rgba(0, 0, 0, 0.36);
             box-shadow: 0 0 8px rgba(0, 0, 0, 0.18), 0 8px 16px rgba(0, 0, 0, 0.36);
     background-color: rgba(158, 158, 158, 0.40);
-}
+} 
 
 .button.fab,
 .button.mini-fab {
@@ -159,24 +159,8 @@ input.button[type="submit"] {
     width: 24px;
 }
 
-.button-icon .ripple-container {
-    border-radius: 50%;
-    -webkit-mask-image: -webkit-radial-gradient(circle, white, black);
-}
-
-.ripple-container {
-    display: block;
-    height: 100%;
-    left: 0px;
-    position: absolute;
-    top: 0px;
-    width: 100%;
-    z-index: 0;
-    overflow: hidden;
-}
-
-.button[disabled] .ripple-container .ripple,
-.button.disabled .ripple-container .ripple {
+.button[disabled] .ripple,
+.button.disabled .ripple {
     background-color: transparent;
 }
 
