--- a/css/animations.css
+++ b/css/animations.css
@@ -9,138 +9,138 @@
 
 .animation.reverse {
     -webkit-animation-direction: reverse;
-    animation-direction: reverse;
+            animation-direction: reverse;
     -webkit-animation-timing-function: ease-in;
-    animation-timing-function: ease-in
+            animation-timing-function: ease-in;
 }
 
 .animation.fade {
     -webkit-animation-name: fade;
-    animation-name: fade;
+            animation-name: fade;
     -webkit-animation-duration: .8s;
-    animation-duration: .8s;
+            animation-duration: .8s;
     -webkit-animation-timing-function: linear;
-    animation-timing-function: linear
+            animation-timing-function: linear;
 }
 
 .animation.scale-up {
     -webkit-animation-name: fade-scale-02;
-    animation-name: fade-scale-02
+            animation-name: fade-scale-02;
 }
 
 .animation.scale-down {
     -webkit-animation-name: fade-scale-18;
-    animation-name: fade-scale-18
+            animation-name: fade-scale-18;
 }
 
 .animation.slide-top {
     -webkit-animation-name: fade-top;
-    animation-name: fade-top
+            animation-name: fade-top;
 }
 
 .animation.slide-bottom {
     -webkit-animation-name: fade-bottom;
-    animation-name: fade-bottom
+            animation-name: fade-bottom;
 }
 
 .animation.slide-left {
     -webkit-animation-name: fade-left;
-    animation-name: fade-left
+            animation-name: fade-left;
 }
 
 .animation.slide-right {
     -webkit-animation-name: fade-right;
-    animation-name: fade-right
+            animation-name: fade-right;
 }
 
 .animation.slide-top-small {
     -webkit-animation-name: fade-top-small;
-    animation-name: fade-top-small
+            animation-name: fade-top-small;
 }
 
 .animation.slide-bottom-small {
     -webkit-animation-name: fade-bottom-small;
-    animation-name: fade-bottom-small
+            animation-name: fade-bottom-small;
 }
 
 .animation.slide-left-small {
     -webkit-animation-name: fade-left-small;
-    animation-name: fade-left-small
+            animation-name: fade-left-small;
 }
 
 .animation.slide-right-small {
     -webkit-animation-name: fade-right-small;
-    animation-name: fade-right-small
+            animation-name: fade-right-small;
 }
 
 .animation.slide-top-medium {
     -webkit-animation-name: fade-top-medium;
-    animation-name: fade-top-medium
+            animation-name: fade-top-medium;
 }
 
 .animation.slide-bottom-medium {
     -webkit-animation-name: fade-bottom-medium;
-    animation-name: fade-bottom-medium
+            animation-name: fade-bottom-medium;
 }
 
 .animation.slide-left-medium {
     -webkit-animation-name: fade-left-medium;
-    animation-name: fade-left-medium
+            animation-name: fade-left-medium;
 }
 
 .animation.slide-right-medium {
     -webkit-animation-name: fade-right-medium;
-    animation-name: fade-right-medium
+            animation-name: fade-right-medium;
 }
 
 .animation.kenburns {
     -webkit-animation-name: scale-kenburns;
-    animation-name: scale-kenburns;
+            animation-name: scale-kenburns;
     -webkit-animation-duration: 15s;
-    animation-duration: 15s
+            animation-duration: 15s;
 }
 
 .animation.shake {
     -webkit-animation-name: shake;
-    animation-name: shake
+            animation-name: shake;
 }
 
 .animation.fast {
     -webkit-animation-duration: .1s;
-    animation-duration: .1s
+            animation-duration: .1s;
 }
 
 .animation.toggle:not(:hover):not(.hover) .animation {
     -webkit-animation-name: none;
-    animation-name: none
+            animation-name: none;
 }
 
 @-webkit-keyframes fade {
     0% {
-        opacity: 0
+        opacity: 0;
     }
     100% {
-        opacity: 1
+        opacity: 1;
     }
 }
 
 @keyframes fade {
     0% {
-        opacity: 0
+        opacity: 0;
     }
     100% {
-        opacity: 1
+        opacity: 1;
     }
 }
 
 @-webkit-keyframes fade-top {
     0% {
         opacity: 0;
-        -webkit-transform: translateY(-100%)
+        -webkit-transform: translateY(-100%);
     }
     100% {
         opacity: 1;
-        -webkit-transform: translateY(0)
+        -webkit-transform: translateY(0);
     }
 }
 
@@ -148,23 +148,23 @@
     0% {
         opacity: 0;
         -webkit-transform: translateY(-100%);
-        transform: translateY(-100%)
+                transform: translateY(-100%);
     }
     100% {
         opacity: 1;
         -webkit-transform: translateY(0);
-        transform: translateY(0)
+                transform: translateY(0);
     }
 }
 
 @-webkit-keyframes fade-bottom {
     0% {
         opacity: 0;
-        -webkit-transform: translateY(100%)
+        -webkit-transform: translateY(100%);
     }
     100% {
         opacity: 1;
-        -webkit-transform: translateY(0)
+        -webkit-transform: translateY(0);
     }
 }
 
@@ -172,23 +172,23 @@
     0% {
         opacity: 0;
         -webkit-transform: translateY(100%);
-        transform: translateY(100%)
+                transform: translateY(100%);
     }
     100% {
         opacity: 1;
         -webkit-transform: translateY(0);
-        transform: translateY(0)
+                transform: translateY(0);
     }
 }
 
 @-webkit-keyframes fade-left {
     0% {
         opacity: 0;
-        -webkit-transform: translateX(-100%)
+        -webkit-transform: translateX(-100%);
     }
     100% {
         opacity: 1;
-        -webkit-transform: translateX(0)
+        -webkit-transform: translateX(0);
     }
 }
 
@@ -196,23 +196,23 @@
     0% {
         opacity: 0;
         -webkit-transform: translateX(-100%);
-        transform: translateX(-100%)
+                transform: translateX(-100%);
     }
     100% {
         opacity: 1;
         -webkit-transform: translateX(0);
-        transform: translateX(0)
+                transform: translateX(0);
     }
 }
 
 @-webkit-keyframes fade-right {
     0% {
         opacity: 0;
-        -webkit-transform: translateX(100%)
+        -webkit-transform: translateX(100%);
     }
     100% {
         opacity: 1;
-        -webkit-transform: translateX(0)
+        -webkit-transform: translateX(0);
     }
 }
 
@@ -220,23 +220,23 @@
     0% {
         opacity: 0;
         -webkit-transform: translateX(100%);
-        transform: translateX(100%)
+                transform: translateX(100%);
     }
     100% {
         opacity: 1;
         -webkit-transform: translateX(0);
-        transform: translateX(0)
+                transform: translateX(0);
     }
 }
 
 @-webkit-keyframes fade-top-small {
     0% {
         opacity: 0;
-        -webkit-transform: translateY(-10px)
+        -webkit-transform: translateY(-10px);
     }
     100% {
         opacity: 1;
-        -webkit-transform: translateY(0)
+        -webkit-transform: translateY(0);
     }
 }
 
@@ -244,23 +244,23 @@
     0% {
         opacity: 0;
         -webkit-transform: translateY(-10px);
-        transform: translateY(-10px)
+                transform: translateY(-10px);
     }
     100% {
         opacity: 1;
         -webkit-transform: translateY(0);
-        transform: translateY(0)
+                transform: translateY(0);
     }
 }
 
 @-webkit-keyframes fade-bottom-small {
     0% {
         opacity: 0;
-        -webkit-transform: translateY(10px)
+        -webkit-transform: translateY(10px);
     }
     100% {
         opacity: 1;
-        -webkit-transform: translateY(0)
+        -webkit-transform: translateY(0);
     }
 }
 
@@ -268,23 +268,23 @@
     0% {
         opacity: 0;
         -webkit-transform: translateY(10px);
-        transform: translateY(10px)
+                transform: translateY(10px);
     }
     100% {
         opacity: 1;
         -webkit-transform: translateY(0);
-        transform: translateY(0)
+                transform: translateY(0);
     }
 }
 
 @-webkit-keyframes fade-left-small {
     0% {
         opacity: 0;
-        -webkit-transform: translateX(-10px)
+        -webkit-transform: translateX(-10px);
     }
     100% {
         opacity: 1;
-        -webkit-transform: translateX(0)
+        -webkit-transform: translateX(0);
     }
 }
 
@@ -292,23 +292,23 @@
     0% {
         opacity: 0;
         -webkit-transform: translateX(-10px);
-        transform: translateX(-10px)
+                transform: translateX(-10px);
     }
     100% {
         opacity: 1;
         -webkit-transform: translateX(0);
-        transform: translateX(0)
+                transform: translateX(0);
     }
 }
 
 @-webkit-keyframes fade-right-small {
     0% {
         opacity: 0;
-        -webkit-transform: translateX(10px)
+        -webkit-transform: translateX(10px);
     }
     100% {
         opacity: 1;
-        -webkit-transform: translateX(0)
+        -webkit-transform: translateX(0);
     }
 }
 
@@ -316,23 +316,23 @@
     0% {
         opacity: 0;
         -webkit-transform: translateX(10px);
-        transform: translateX(10px)
+                transform: translateX(10px);
     }
     100% {
         opacity: 1;
         -webkit-transform: translateX(0);
-        transform: translateX(0)
+                transform: translateX(0);
     }
 }
 
 @-webkit-keyframes fade-top-medium {
     0% {
         opacity: 0;
-        -webkit-transform: translateY(-50px)
+        -webkit-transform: translateY(-50px);
     }
     100% {
         opacity: 1;
-        -webkit-transform: translateY(0)
+        -webkit-transform: translateY(0);
     }
 }
 
@@ -340,23 +340,23 @@
     0% {
         opacity: 0;
         -webkit-transform: translateY(-50px);
-        transform: translateY(-50px)
+                transform: translateY(-50px);
     }
     100% {
         opacity: 1;
         -webkit-transform: translateY(0);
-        transform: translateY(0)
+                transform: translateY(0);
     }
 }
 
 @-webkit-keyframes fade-bottom-medium {
     0% {
         opacity: 0;
-        -webkit-transform: translateY(50px)
+        -webkit-transform: translateY(50px);
     }
     100% {
         opacity: 1;
-        -webkit-transform: translateY(0)
+        -webkit-transform: translateY(0);
     }
 }
 
@@ -364,23 +364,23 @@
     0% {
         opacity: 0;
         -webkit-transform: translateY(50px);
-        transform: translateY(50px)
+                transform: translateY(50px);
     }
     100% {
         opacity: 1;
         -webkit-transform: translateY(0);
-        transform: translateY(0)
+                transform: translateY(0);
     }
 }
 
 @-webkit-keyframes fade-left-medium {
     0% {
         opacity: 0;
-        -webkit-transform: translateX(-50px)
+        -webkit-transform: translateX(-50px);
     }
     100% {
         opacity: 1;
-        -webkit-transform: translateX(0)
+        -webkit-transform: translateX(0);
     }
 }
 
@@ -388,23 +388,23 @@
     0% {
         opacity: 0;
         -webkit-transform: translateX(-50px);
-        transform: translateX(-50px)
+                transform: translateX(-50px);
     }
     100% {
         opacity: 1;
         -webkit-transform: translateX(0);
-        transform: translateX(0)
+                transform: translateX(0);
     }
 }
 
 @-webkit-keyframes fade-right-medium {
     0% {
         opacity: 0;
-        -webkit-transform: translateX(50px)
+        -webkit-transform: translateX(50px);
     }
     100% {
         opacity: 1;
-        -webkit-transform: translateX(0)
+        -webkit-transform: translateX(0);
     }
 }
 
@@ -412,23 +412,23 @@
     0% {
         opacity: 0;
         -webkit-transform: translateX(50px);
-        transform: translateX(50px)
+                transform: translateX(50px);
     }
     100% {
         opacity: 1;
         -webkit-transform: translateX(0);
-        transform: translateX(0)
+                transform: translateX(0);
     }
 }
 
 @-webkit-keyframes fade-scale-02 {
     0% {
         opacity: 0;
-        -webkit-transform: scale(.2)
+        -webkit-transform: scale(.2);
     }
     100% {
         opacity: 1;
-        -webkit-transform: scale(1)
+        -webkit-transform: scale(1);
     }
 }
 
@@ -436,23 +436,23 @@
     0% {
         opacity: 0;
         -webkit-transform: scale(.2);
-        transform: scale(.2)
+                transform: scale(.2);
     }
     100% {
         opacity: 1;
         -webkit-transform: scale(1);
-        transform: scale(1)
+                transform: scale(1);
     }
 }
 
 @-webkit-keyframes fade-scale-18 {
     0% {
         opacity: 0;
-        -webkit-transform: scale(1.8)
+        -webkit-transform: scale(1.8);
     }
     100% {
         opacity: 1;
-        -webkit-transform: scale(1)
+        -webkit-transform: scale(1);
     }
 }
 
@@ -460,66 +460,66 @@
     0% {
         opacity: 0;
         -webkit-transform: scale(1.8);
-        transform: scale(1.8)
+                transform: scale(1.8);
     }
     100% {
         opacity: 1;
         -webkit-transform: scale(1);
-        transform: scale(1)
+                transform: scale(1);
     }
 }
 
 @-webkit-keyframes scale-kenburns {
     0% {
-        -webkit-transform: scale(1)
+        -webkit-transform: scale(1);
     }
     100% {
-        -webkit-transform: scale(1.2)
+        -webkit-transform: scale(1.2);
     }
 }
 
 @keyframes scale-kenburns {
     0% {
         -webkit-transform: scale(1);
-        transform: scale(1)
+        transform: scale(1);
     }
     100% {
         -webkit-transform: scale(1.2);
-        transform: scale(1.2)
+        transform: scale(1.2);
     }
 }
 
 @-webkit-keyframes shake {
     0%,
     100% {
-        -webkit-transform: translateX(0)
+        -webkit-transform: translateX(0);
     }
     10% {
-        -webkit-transform: translateX(-9px)
+        -webkit-transform: translateX(-9px);
     }
     20% {
-        -webkit-transform: translateX(8px)
+        -webkit-transform: translateX(8px);
     }
     30% {
-        -webkit-transform: translateX(-7px)
+        -webkit-transform: translateX(-7px);
     }
     40% {
-        -webkit-transform: translateX(6px)
+        -webkit-transform: translateX(6px);
     }
     50% {
-        -webkit-transform: translateX(-5px)
+        -webkit-transform: translateX(-5px);
     }
     60% {
-        -webkit-transform: translateX(4px)
+        -webkit-transform: translateX(4px);
     }
     70% {
-        -webkit-transform: translateX(-3px)
+        -webkit-transform: translateX(-3px);
     }
     80% {
-        -webkit-transform: translateX(2px)
+        -webkit-transform: translateX(2px);
     }
     90% {
-        -webkit-transform: translateX(-1px)
+        -webkit-transform: translateX(-1px);
     }
 }
 
@@ -527,42 +527,42 @@
     0%,
     100% {
         -webkit-transform: translateX(0);
-        transform: translateX(0)
+        transform: translateX(0);
     }
     10% {
         -webkit-transform: translateX(-9px);
-        transform: translateX(-9px)
+        transform: translateX(-9px);
     }
     20% {
         -webkit-transform: translateX(8px);
-        transform: translateX(8px)
+        transform: translateX(8px);
     }
     30% {
         -webkit-transform: translateX(-7px);
-        transform: translateX(-7px)
+        transform: translateX(-7px);
     }
     40% {
         -webkit-transform: translateX(6px);
-        transform: translateX(6px)
+        transform: translateX(6px);
     }
     50% {
         -webkit-transform: translateX(-5px);
-        transform: translateX(-5px)
+        transform: translateX(-5px);
     }
     60% {
         -webkit-transform: translateX(4px);
-        transform: translateX(4px)
+        transform: translateX(4px);
     }
     70% {
         -webkit-transform: translateX(-3px);
-        transform: translateX(-3px)
+        transform: translateX(-3px);
     }
     80% {
         -webkit-transform: translateX(2px);
-        transform: translateX(2px)
+        transform: translateX(2px);
     }
     90% {
         -webkit-transform: translateX(-1px);
-        transform: translateX(-1px)
+        transform: translateX(-1px);
     }
 }
