--- a/css/base.css
+++ b/css/base.css
@@ -76,6 +76,7 @@
  .icon-toggle,
  .item,
  .nav-item,
+ .dropdown-item,
  .material-radio,
  .material-range,
  .material-switch,
@@ -92,7 +93,7 @@
      width: 100%;
      height: 100%;
      -ms-touch-action: manipulation;
-     touch-action: manipulation;
+         touch-action: manipulation;
  }
     
  /*
