--- a/css/lists-and-tables.css
+++ b/css/lists-and-tables.css
@@ -17,24 +17,24 @@
 }
 
 .table-all {
-    border: 1px solid #ccc
+    border: 1px solid #ccc;
 }
 
 .bordered tr,
 .table-all tr {
-    border-bottom: 1px solid #ddd
+    border-bottom: 1px solid #ddd;
 }
 
 .striped tbody tr:nth-child(even) {
-    background-color: #f1f1f1
+    background-color: #f1f1f1;
 }
 
 .table-all tr:nth-child(odd) {
-    background-color: #fff
+    background-color: #fff;
 }
 
 .table-all tr:nth-child(even) {
-    background-color: #f1f1f1
+    background-color: #f1f1f1;
 }
 
 .hoverable tbody tr::-moz-focus-inner,
@@ -59,7 +59,7 @@
 
 .centered tr th,
 .centered tr td {
-    text-align: center
+    text-align: center;
 }
 
 .table td,
@@ -69,27 +69,27 @@
     padding: 8px 8px;
     display: table-cell;
     text-align: left;
-    vertical-align: top
+    vertical-align: top;
 }
 
 .table th:first-child,
 .table td:first-child,
 .table-all th:first-child,
 .table-all td:first-child {
-    padding-left: 16px
+    padding-left: 16px;
 }
 
 .list {
     list-style-type: none;
     padding: 0;
-    margin: 0
+    margin: 0;
 }
 
 .list li {
     padding: 8px 16px;
-    border-bottom: 1px solid #ddd
+    border-bottom: 1px solid #ddd;
 }
 
 .list li:last-child {
-    border-bottom: none
+    border-bottom: none;
 }
