--- a/css/nav-and-dropdowns.css
+++ b/css/nav-and-dropdowns.css
@@ -1,48 +1,48 @@
 .nav-item {
     -webkit-box-align: center;
-    -ms-flex-align: center;
+       -moz-box-align: center;
+       -ms-flex-align: center;
     -webkit-align-items: center;
-    -moz-box-align: center;
-    align-items: center;
+            align-items: center;
     display: -webkit-box;
     display: -ms-flexbox;
     display: -webkit-flex;
     display: -moz-box;
     display: flex;
-    -webkit-box-flex: 0;
     -ms-flex-positive: 0;
     -webkit-flex-grow: 0;
-    -moz-box-flex: 0;
-    flex-grow: 0;
-    -ms-flex-negative: 0;
+     -webkit-box-flex: 0;
+        -moz-box-flex: 0;
+            flex-grow: 0;
+      -ms-flex-negative: 0;
     -webkit-flex-shrink: 0;
-    flex-shrink: 0;
-    font-size: 1rem;
+            flex-shrink: 0;
     -webkit-box-pack: center;
-    -ms-flex-pack: center;
+       -moz-box-pack: center;
+       -ms-flex-pack: center;
     -webkit-justify-content: center;
-    -moz-box-pack: center;
-    justify-content: center;
+            justify-content: center;
+    font-size: 1rem;
     line-height: 1.5;
     padding: 0.5rem 0.75rem;
     cursor: pointer;
     vertical-align: middle;
     -webkit-touch-callout: none;
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none
+      -webkit-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
 }
 
 .nav-item a {
-    -webkit-box-flex: 1;
     -ms-flex-positive: 1;
     -webkit-flex-grow: 1;
-    -moz-box-flex: 1;
-    flex-grow: 1;
-    -ms-flex-negative: 0;
+     -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+            flex-grow: 1;
     -webkit-flex-shrink: 0;
-    flex-shrink: 0;
+      -ms-flex-negative: 0;
+            flex-shrink: 0;
 }
 
 .nav-item img {
@@ -52,10 +52,10 @@
 @media screen and (max-width: 48em) {
     .nav-item {
         -webkit-box-pack: start;
-        -ms-flex-pack: start;
+           -moz-box-pack: start;
+           -ms-flex-pack: start;
         -webkit-justify-content: flex-start;
-        -moz-box-pack: start;
-        justify-content: flex-start;
+                justify-content: flex-start;
     }
 }
 
@@ -66,14 +66,14 @@
     display: -webkit-flex;
     display: -moz-box;
     display: flex;
-    -webkit-box-flex: 1;
     -ms-flex-positive: 1;
     -webkit-flex-grow: 1;
-    -moz-box-flex: 1;
-    flex-grow: 1;
-    -ms-flex-negative: 0;
+     -webkit-box-flex: 1;
+        -moz-box-flex: 1;
+            flex-grow: 1;
     -webkit-flex-shrink: 0;
-    flex-shrink: 0;
+      -ms-flex-negative: 0;
+            flex-shrink: 0;
     max-width: 100%;
     overflow: auto;
 }
@@ -82,26 +82,26 @@
     .nav-left,
     .nav-right {
         -ms-flex-preferred-size: 0;
-        -webkit-flex-basis: 0;
-        flex-basis: 0;
+             -webkit-flex-basis: 0;
+                     flex-basis: 0;
     }
 }
 
 .nav-left {
     -webkit-box-pack: start;
-    -ms-flex-pack: start;
+       -moz-box-pack: start;
+       -ms-flex-pack: start;
     -webkit-justify-content: flex-start;
-    -moz-box-pack: start;
-    justify-content: flex-start;
+            justify-content: flex-start;
     white-space: nowrap;
 }
 
 .nav-right {
     -webkit-box-pack: end;
-    -ms-flex-pack: end;
+       -moz-box-pack: end;
+       -ms-flex-pack: end;
     -webkit-justify-content: flex-end;
-    -moz-box-pack: end;
-    justify-content: flex-end;
+            justify-content: flex-end;
 }
 
 .nav-center {
@@ -110,19 +110,19 @@
     display: -webkit-flex;
     display: -moz-box;
     display: flex;
-    -webkit-box-flex: 0;
     -ms-flex-positive: 0;
-    -webkit-flex-grow: 0;
-    -moz-box-flex: 0;
-    flex-grow: 0;
     -ms-flex-negative: 0;
+    -webkit-flex-grow: 0;
+     -webkit-box-flex: 0;
+        -moz-box-flex: 0;
+            flex-grow: 0;
     -webkit-flex-shrink: 0;
-    flex-shrink: 0;
-    -webkit-box-pack: center;
-    -ms-flex-pack: center;
+            flex-shrink: 0;
     -webkit-justify-content: center;
-    -moz-box-pack: center;
-    justify-content: center;
+           -webkit-box-pack: center;
+              -ms-flex-pack: center;
+              -moz-box-pack: center;
+            justify-content: center;
     margin-left: auto;
     margin-right: auto;
 }
@@ -235,12 +235,13 @@
     line-height: 48px;
     white-space: nowrap;
     -webkit-transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-    -o-transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-    transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
+         -o-transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+            transition: opacity 0.2s cubic-bezier(0.4, 0, 0.2, 1);
+    -webkit-touch-callout: none;
+      -webkit-user-select: none;
+         -moz-user-select: none;
+          -ms-user-select: none;
+              user-select: none;
 }
 
 .dropdown-content .dropdown-item::-moz-focus-inner,
