a few adjustments to better match the material design colors

--- a/css/colors.css
+++ b/css/colors.css
@@ -19,7 +19,7 @@
 .light-blue,
 .hover-light-blue:hover {
     color: #000!important;
-    background-color: #87CEEB!important
+    background-color: #03A9F4!important
 }
 
 .brown,
@@ -143,7 +143,7 @@
 .gray,
 .hover-gray:hover {
     color: #000!important;
-    background-color: #bbb!important
+    background-color: #9e9e9e!important
 }
 
 .light-grey,
@@ -232,7 +232,7 @@
 }
 
 .text-light-blue {
-    color: #87CEEB!important
+    color: #03A9F4!important
 }
 
 .text-brown {
