--- a/css/nav-and-dropdowns.css
+++ b/css/nav-and-dropdowns.css
@@ -1,3 +1,4 @@
+/* flex: flex-grow | flex-shrink | flex-basis */
 .nav-item {
     -webkit-box-align: center;
        -moz-box-align: center;
@@ -9,14 +10,11 @@
     display: -webkit-flex;
     display: -moz-box;
     display: flex;
-    -ms-flex-positive: 0;
-    -webkit-flex-grow: 0;
-     -webkit-box-flex: 0;
-        -moz-box-flex: 0;
-            flex-grow: 0;
-      -ms-flex-negative: 0;
-    -webkit-flex-shrink: 0;
-            flex-shrink: 0;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+       -moz-box-flex: 0;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
     -webkit-box-pack: center;
        -moz-box-pack: center;
        -ms-flex-pack: center;
@@ -35,28 +33,15 @@
 }
 
 .nav-item a {
-    -ms-flex-positive: 1;
-    -webkit-flex-grow: 1;
-     -webkit-box-flex: 1;
-        -moz-box-flex: 1;
-            flex-grow: 1;
-    -webkit-flex-shrink: 0;
-      -ms-flex-negative: 0;
-            flex-shrink: 0;
+   -webkit-box-flex: 1;
+   -webkit-flex: 1 0 auto;
+      -moz-box-flex: 1;
+       -ms-flex: 1 0 auto;
+           flex: 1 0 auto;
 }
 
 .nav-item img {
     max-height: 1.75rem;
-}
-
-@media screen and (max-width: 48em) {
-    .nav-item {
-        -webkit-box-pack: start;
-           -moz-box-pack: start;
-           -ms-flex-pack: start;
-        -webkit-justify-content: flex-start;
-                justify-content: flex-start;
-    }
 }
 
 .nav-left,
@@ -66,16 +51,12 @@
     display: -webkit-flex;
     display: -moz-box;
     display: flex;
-    -ms-flex-positive: 1;
-    -webkit-flex-grow: 1;
-     -webkit-box-flex: 1;
-        -moz-box-flex: 1;
-            flex-grow: 1;
-    -webkit-flex-shrink: 0;
-      -ms-flex-negative: 0;
-            flex-shrink: 0;
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 0 auto;
+       -moz-box-flex: 1;
+        -ms-flex: 1 0 auto;
+            flex: 1 0 auto;
     max-width: 100%;
-    overflow: auto;
 }
 
 @media screen and (min-width: 74.5em) {
@@ -93,7 +74,6 @@
        -ms-flex-pack: start;
     -webkit-justify-content: flex-start;
             justify-content: flex-start;
-    white-space: nowrap;
 }
 
 .nav-right {
@@ -110,14 +90,11 @@
     display: -webkit-flex;
     display: -moz-box;
     display: flex;
-    -ms-flex-positive: 0;
-    -ms-flex-negative: 0;
-    -webkit-flex-grow: 0;
-     -webkit-box-flex: 0;
-        -moz-box-flex: 0;
-            flex-grow: 0;
-    -webkit-flex-shrink: 0;
-            flex-shrink: 0;
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+       -moz-box-flex: 0;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
     -webkit-justify-content: center;
            -webkit-box-pack: center;
               -ms-flex-pack: center;
@@ -125,26 +102,6 @@
             justify-content: center;
     margin-left: auto;
     margin-right: auto;
-}
-
-@media screen and (max-width: 48em) {
-    .nav-menu.nav-right {
-        background-color: inherit;
-        -webkit-box-shadow: 0 4px 7px rgba(10, 10, 10, 0.1);
-                box-shadow: 0 4px 7px rgba(10, 10, 10, 0.1);
-        left: 0;
-        display: none;
-        right: 0;
-        top: 100%;
-        position: absolute;
-    }
-    .nav-menu.nav-right .nav-item {
-        border-top: 1px solid rgba(219, 219, 219, 0.5);
-        padding: 0.75rem;
-    }
-    .nav-menu.nav-right.active {
-        display: block;
-    }
 }
 
 .nav {
