added better positioning for the dropdowns

--- a/css/nav-and-dropdowns.css
+++ b/css/nav-and-dropdowns.css
@@ -173,6 +173,14 @@
     background-color: #fff;
 }
 
+.dropdown-content.right {
+    right: 0;
+}
+
+.dropdown-content.top {
+    bottom: 100%;
+}
+
 .dropdown-content .dropdown-item,
 .sidenav .nav-item {
     display: block;
