--- a/css/utilities.css
+++ b/css/utilities.css
@@ -3,23 +3,23 @@
 }
 
 .border {
-    border: 1px solid #ccc;
+    border: 1px solid rgba(0, 0, 0, .2)!important;
 }
 
 .border-top {
-    border-top: 1px solid #ccc;
+    border-top: 1px solid rgba(0, 0, 0, .2)!important;
 }
 
 .border-bottom {
-    border-bottom: 1px solid #ccc;
+    border-bottom: 1px solid rgba(0, 0, 0, .2)!important;
 }
 
 .border-left {
-    border-left: 1px solid #ccc;
+    border-left: 1px solid rgba(0, 0, 0, .2)!important;
 }
 
 .border-right {
-    border-right: 1px solid #ccc;
+    border-right: 1px solid rgba(0, 0, 0, .2)!important;
 }
 
 .round {
