--- a/css/base.css
+++ b/css/base.css
@@ -135,48 +135,106 @@
  }
 
  h1,
- .h1 {
-     font-size: 36px!important
- }
+.h1 {
+  font-size: 112px!important;
+  font-weight: 300;
+  line-height: 1;
+  letter-spacing: -0.04em;
+}
 
- h2,
- .h2 {
-     font-size: 30px!important
- }
+h1.contrast,
+.h1.contrast {
+  opacity: 0.54; 
+}
 
- h3,
- .h3,
- .title {
-     font-size: 24px!important
- }
+h2,
+.h2 {
+  font-size: 56px!important;
+  font-weight: 400;
+  line-height: 1.35;
+  letter-spacing: -0.02em; 
+}
 
- h4,
- .h4 {
-     font-size: 20px!important
- }
+h2.contrast,
+.h2.contrast {
+  opacity: 0.54; 
+}
 
- h5,
- .h5 {
-     font-size: 18px!important
- }
+h3,
+.h3 {
+  font-size: 45px!important;
+  font-weight: 400;
+  line-height: 48px; }
 
- h6,
- .h6 {
-     font-size: 16px!important
- }
+h3.contrast,
+.h3.contrast {
+  font-size: 45px!important;
+  font-weight: 400;
+  line-height: 48px;
+  opacity: 0.54; }
 
- h1,
- .h1,
- h2,
- .h2,
- h3,
- .h3,
- .title,
- h4,
- .h4,
- h5,
- .h5,
- h6,
- .h6 {
-     margin: 10px 0
+h4,
+.h4 {
+  font-size: 34px!important;
+  font-weight: 400;
+  line-height: 40px; }
+
+h4.contrast,
+.h4.contrast {
+  font-size: 34px!important;
+  font-weight: 400;
+  line-height: 40px;
+  opacity: 0.54; }
+
+h5,
+.h5,
+.headline {
+  font-size: 24px!important;
+  font-weight: 400;
+  line-height: 32px;
+  -moz-osx-font-smoothing: grayscale; 
+}
+
+h5.contrast,
+.h5.contrast,
+.headline.contrast {
+  opacity: 0.87; 
+}
+
+h6,
+.h6,
+.title {
+  font-size: 20px!important;
+  font-weight: 500;
+  line-height: 1;
+  letter-spacing: 0.02em; 
+}
+
+h6.contrast,
+.h6.contrast,
+.title.contrast {
+  font-size: 20px!important;
+  font-weight: 500;
+  line-height: 1;
+  letter-spacing: 0.02em;
+  opacity: 0.87; }
+
+.subheading {
+  font-size: 16px!important;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.04em; }
+
+.subheading.contrast {
+  font-size: 16px!important;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.04em;
+  opacity: 0.87; }
+
+.caption {
+  font-size: 12px!important;
+  font-weight: 400;
+  line-height: 1;
+  letter-spacing: 0; 
  }
