--- a/css/footer.css
+++ b/css/footer.css
@@ -1,87 +1,97 @@
 .footer,
-.footer .footer-items {
-    display: -webkit-flex;
-    display: -ms-flexbox;
+.footer .hero {
     display: -webkit-box;
+    display: -webkit-flex;
     display: -moz-box;
+    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: end;
-       -ms-flex-align: end;
-       -moz-box-align: end;
-    -webkit-align-items: flex-end;
-            align-items: flex-end;
+    -webkit-box-align: start;
+    -webkit-align-items: flex-start;
+       -moz-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
 }
 
 .footer {
-    -webkit-box-orient: horizontal;
-       -moz-box-orient: horizontal;
-    -webkit-box-direction: normal;
-       -moz-box-direction: normal;
-    -webkit-flex-flow: row wrap;
-        -ms-flex-flow: row wrap;
-            flex-flow: row wrap;
-    -webkit-box-pack: justify;
-       -moz-box-pack: justify;
-       -ms-flex-pack: justify;
-    -webkit-justify-content: space-between;
-            justify-content: space-between;
     padding: 32px 16px;
     color: #9e9e9e;
     background-color: #424242; 
 }
 
+.footer .footer-list {
+    margin: 0px 16px;
+}
+
 .footer .title {
-    font-size: 24px;
-    color: #f1f1f1;
-}
-
-.footer .footer-items {
-    -webkit-box-orient: horizontal;
-       -moz-box-orient: horizontal;
-     -webkit-box-direction: normal;
-        -moz-box-direction: normal;
-    -webkit-flex-flow: row nowrap;
-        -ms-flex-flow: row nowrap;
-            flex-flow: row nowrap;
-    list-style: none;
-    margin: 0;
-    padding: 0; 
-}
-
-.footer .footer-items li {
-    margin-bottom: 0;
-    margin-right: 16px; 
-}
-
-.footer .footer-items a {
-    color: inherit;
-    text-decoration: none;
-    white-space: nowrap; 
-}
-
-.footer .footer-left {
-    display: inline-block;
-    -webkit-box-ordinal-group: 1;
-       -moz-box-ordinal-group: 1;
-   -ms-flex-order: 0;
-    -webkit-order: 0;
-            order: 0; 
-}
-
-.footer .footer-right {
-  display: inline-block;
-    -webkit-box-ordinal-group: 2;
-       -moz-box-ordinal-group: 2;
-       -ms-flex-order: 1;
-        -webkit-order: 1;
-                order: 1; 
+    font-size: 16px;
+    font-weight: 400;
+    color: rgba(255, 255, 255, .9);
+    margin-bottom: 8px;
 }
 
 .footer .social-btn {
     width: 36px;
     height: 36px;
     padding: 0;
-    margin: 0;
-    background-color: rgb(158,158,158);
+    margin: 8px 16px;
     border: none; 
+    border-radius: 2px;
+    background-color: rgb(158,158,158);
+    color: #424242;
+    font-size: 24px;
+    text-align: center;
+    line-height: 36px;
+}
+
+.footer-left, 
+.footer-right,
+.footer-center {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-flex-wrap: wrap;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+    max-width: 100%;
+}
+
+.footer-left, 
+.footer-right {
+    -webkit-box-flex: 1;
+    -webkit-flex: 1 0 0;
+       -moz-box-flex: 1;
+        -ms-flex: 1 0 0px;
+            flex: 1 0 0;
+}
+
+.footer-left {
+    -webkit-box-pack: start;
+    -webkit-justify-content: flex-start;
+       -moz-box-pack: start;
+        -ms-flex-pack: start;
+            justify-content: flex-start;
+}
+
+.footer-center {
+    -webkit-box-flex: 0;
+    -webkit-flex: 0 0 auto;
+       -moz-box-flex: 0;
+        -ms-flex: 0 0 auto;
+            flex: 0 0 auto;
+    -webkit-box-pack: center;
+    -webkit-justify-content: center;
+       -moz-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 0 auto;
+}
+
+.footer-right {
+    -webkit-box-pack: end;
+    -webkit-justify-content: flex-end;
+       -moz-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
 }
