--- a/css/nav-and-dropdowns.css
+++ b/css/nav-and-dropdowns.css
@@ -52,21 +52,13 @@
     display: -moz-box;
     display: flex;
     -webkit-box-flex: 1;
-    -webkit-flex: 1 0 auto;
+    -webkit-flex: 1 0 0;
        -moz-box-flex: 1;
-        -ms-flex: 1 0 auto;
-            flex: 1 0 auto;
+        -ms-flex: 1 0 0;
+            flex: 1 0 0;
     max-width: 100%;
 }
 
-@media screen and (min-width: 74.5em) {
-    .nav-left,
-    .nav-right {
-        -ms-flex-preferred-size: 0;
-             -webkit-flex-basis: 0;
-                     flex-basis: 0;
-    }
-}
 
 .nav-left {
     -webkit-box-pack: start;
@@ -104,7 +96,8 @@
     margin-right: auto;
 }
 
-.nav {
+.nav,
+.nav-hero {
     background-color: white;
     display: -webkit-box;
     display: -ms-flexbox;
@@ -116,6 +109,18 @@
     text-align: center;
     z-index: 10;
     width: 100%;
+}
+
+.nav-hero {
+    max-width: 1024px;
+    background-color: transparent;
+    margin: auto;
+}
+
+.nav-brand {
+    font-size: 24px!important;
+    font-weight: 400;
+    margin-left: 32px;
 }
 
 .nav-offset {
