--- a/css/footer.css
+++ b/css/footer.css
@@ -1,15 +1,6 @@
 .footer,
 .footer .hero {
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-align: start;
-    -webkit-align-items: flex-start;
-       -moz-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    display: block;
 }
 
 .footer {
@@ -54,6 +45,10 @@
     -webkit-flex-wrap: wrap;
         -ms-flex-wrap: wrap;
             flex-wrap: wrap;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+    margin: 16px 0px;
     max-width: 100%;
 }
 
@@ -66,32 +61,54 @@
             flex: 1 0 0;
 }
 
-.footer-left {
-    -webkit-box-pack: start;
-    -webkit-justify-content: flex-start;
-       -moz-box-pack: start;
-        -ms-flex-pack: start;
-            justify-content: flex-start;
-}
-
 .footer-center {
     -webkit-box-flex: 0;
     -webkit-flex: 0 0 auto;
        -moz-box-flex: 0;
         -ms-flex: 0 0 auto;
             flex: 0 0 auto;
-    -webkit-box-pack: center;
-    -webkit-justify-content: center;
-       -moz-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    margin: 0 auto;
 }
 
-.footer-right {
-    -webkit-box-pack: end;
-    -webkit-justify-content: flex-end;
-       -moz-box-pack: end;
-        -ms-flex-pack: end;
-            justify-content: flex-end;
+
+@media screen and (min-width: 48em) {
+    .footer,
+    .footer .hero {
+        display: -webkit-box;
+        display: -webkit-flex;
+        display: -moz-box;
+        display: -ms-flexbox;
+        display: flex;
+        -webkit-box-align: start;
+        -webkit-align-items: flex-start;
+        -moz-box-align: start;
+            -ms-flex-align: start;
+                align-items: flex-start;
+    }
+
+    .footer-left {
+        -webkit-box-pack: start;
+        -webkit-justify-content: flex-start;
+        -moz-box-pack: start;
+            -ms-flex-pack: start;
+                justify-content: flex-start;
+        margin: 0;
+    }
+
+    .footer-center {
+            -webkit-box-pack: center;
+        -webkit-justify-content: center;
+        -moz-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        margin: 0 auto;
+    }
+
+    .footer-right {
+        -webkit-box-pack: end;
+        -webkit-justify-content: flex-end;
+        -moz-box-pack: end;
+            -ms-flex-pack: end;
+                justify-content: flex-end;
+        margin: 0;
+    }
 }
