--- a/css/animations.css
+++ b/css/animations.css
@@ -2,9 +2,11 @@
     -webkit-animation-duration: .5s;
     animation-duration: .5s;
     -webkit-animation-timing-function: ease-out;
-    animation-timing-function: ease-out;
+            animation-timing-function: ease-out;
+    -webkit-animation-timing-function: cubic-bezier(0.0, 0.0, 0.2, 1);
+            animation-timing-function: cubic-bezier(0.0, 0.0, 0.2, 1);
     -webkit-animation-fill-mode: both;
-    animation-fill-mode: both
+            animation-fill-mode: both;
 }
 
 .animation.reverse {
@@ -12,6 +14,8 @@
             animation-direction: reverse;
     -webkit-animation-timing-function: ease-in;
             animation-timing-function: ease-in;
+    -webkit-animation-timing-function: cubic-bezier(0.4, 0.0, 1, 1);
+            animation-timing-function: cubic-bezier(0.4, 0.0, 1, 1);
 }
 
 .animation.fade {
