--- a/css/base.css
+++ b/css/base.css
@@ -15,14 +15,17 @@
  *,
  *::before,
  *::after {
-     margin: 0;
-     padding: 0;
-     -webkit-box-sizing: border-box;
-        -moz-box-sizing: border-box;
-             box-sizing: border-box;
-     -webkit-transition: all .27s ease, color 0s, visibility 0s;
-          -o-transition: all .27s ease, color 0s, visibility 0s;
-             transition: all .27s ease, color 0s, visibility 0s;
+    margin: 0;
+    padding: 0;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+            box-sizing: border-box;
+    -webkit-transition: all .27s ease, color 0s, visibility 0s;
+         -o-transition: all .27s ease, color 0s, visibility 0s;
+            transition: all .27s ease, color 0s, visibility 0s;
+    -webkit-transition: all .27s cubic-bezier(0.4, 0.0, 0.2, 1), color 0s, visibility 0s;
+         -o-transition: all .27s cubic-bezier(0.4, 0.0, 0.2, 1), color 0s, visibility 0s;
+            transition: all .27s cubic-bezier(0.4, 0.0, 0.2, 1), color 0s, visibility 0s;
              
      /* Support for all WebKit browsers. */
     -webkit-font-smoothing: antialiased;
