--- a/css/tabs-and-accordions.css
+++ b/css/tabs-and-accordions.css
@@ -24,16 +24,16 @@
     height: 2px;
     background-color: #000;
     width: 0;
-    -webkit-transition: 0s ease;
-         -o-transition: 0s ease;
-            transition: 0s ease;
+    -webkit-transition: 0s;
+         -o-transition: 0s;
+            transition: 0s;
 }
 
 .tab.is-active .tab-bar {
     width: 100%;
-    -webkit-transition: .15s ease;
-         -o-transition: .15s ease;
-            transition: .15s ease;
+    -webkit-transition:all .18s cubic-bezier(0.0, 0.0, 0.2, 1);
+         -o-transition:all .18s cubic-bezier(0.0, 0.0, 0.2, 1);
+            transition:all .18s cubic-bezier(0.0, 0.0, 0.2, 1);
 }
 
 .tab-toggle,
