--- a/css/transitions.css
+++ b/css/transitions.css
@@ -3,15 +3,15 @@
         -ms-transform: translate(0) scale(1) rotate(0);
             transform: translate(0) scale(1) rotate(0);
     opacity: 1;
-    -webkit-transition: all .27s ease-out;
-         -o-transition: all .27s ease-out;
-            transition: all .27s ease-out;
+    -webkit-transition: all .27s cubic-bezier(0.0, 0.0, 0.2, 1);
+         -o-transition: all .27s cubic-bezier(0.0, 0.0, 0.2, 1);
+            transition: all .27s cubic-bezier(0.0, 0.0, 0.2, 1);
 }
 
 .transition.is-stopped {
-    -webkit-transition: all .27s ease-in;
-         -o-transition: all .27s ease-in;
-            transition: all .27s ease-in;
+    -webkit-transition: all .27s cubic-bezier(0.4, 0.0, 1, 1);
+         -o-transition: all .27s cubic-bezier(0.4, 0.0, 1, 1);
+            transition: all .27s cubic-bezier(0.4, 0.0, 1, 1);
 }
 
 .transition.slide-left.is-stopped {
